css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');

/* --------------------------------------------- Backgrounds */

.welcomeBackground {
    background: url("../assets/images/background.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.aboutBackground {
    background: url("../assets/images/background-1.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.songsBackground {
    background: url("../assets/images/background-2.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;    
}

.bookingsBackground {
    background: url("../assets/images/background-3.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;    
}

.contactBackground {
    background: url("../assets/images/background-4.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;    
}

/* --------------------------------------------- Header */
header {
    background: url("../assets/images/spiral.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
    
.menuDivContainer {
    min-height: 360px;
}

.menuDiv a {
    font-family: "Exo", sans-serif;
    font-weight: 700;
    color: #000000;
}

.menuDiv a:hover {
    background: #000000;
    color: #ffffff;
}
/* --------------------------------------------- Footer */


footer::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 320px;
    background: url("../assets/images/guitar.png");
    opacity: 0.1;
    z-index: -1;
}

.footer {
    text-align: center;
    padding: 30px;
}

.footerMessage {
    padding: 50px;
}

.footerCopyright {
    padding-top: 50px;
}

.footerLinks {
    font-size: 30px;    
}

/* --------------------------------------------- Section */


section {
    font-family: "Roboto", sans-serif;
    color: #000000;
}

/* --------------------------------------------- Index */

.welcomeContainer {
    padding: 50px;
    font-weight: 700; 
}

.welcomeMessage {
    text-align: center;
}

/* --------------------------------------------- About */

.aboutContainer {
    padding: 50px;
    font-weight: 300; 
    text-align: center;
}

.aboutIntro {
    text-align: center;
}

.aboutMeet {
    display: inline-block;
    padding-top: 50px;
    max-width: 720px;
}

.aboutMeet h3{
    text-align: center;
    
}



/* --------------------------------------------- Songs */

.songsContainer {
    padding: 50px 0;
    font-weight: 300; 
    text-align: center;
}

.songsAudioContainer {
    padding: 30px 0;
    display: inline-block;
}


/* --------------------------------------------- Bookings */

.bookingsContainer {
    padding: 50px 0;
    font-weight: 300; 
    text-align: center;
}

.bookingsListContainer {
    padding: 30px 0;
    display: inline-block;
}

/* --------------------------------------------- Contact */

.contactContainer {
    padding: 50px 0;
    font-weight: 300; 
    text-align: center;
}

.contactEmailPostalContainer {
    padding: 50px 0;
    font-weight: 300; 
    display: inline-block;
}

.contactEmail, 
.contactPostal{
    padding: 30px 0;
}
/* --------------------------------------------- Forms */

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    color: #fafafa;
    background-color: #e84610;
}

input[type="date"]:before {
    content: attr(placeholder) !important;
    color: #aaa;
    margin-right: 0.5em;
}

input[type="date"]:focus:before,
input[type="date"]:valid:before {
    content: "";
}

/* --------------------------------------------- Media Queries */

@media(min-width: 768px) {
    .menuDivContainer {
        background: url("../assets/images/monkees.jpg");
        background-position: center;
        background-repeat: no-repeat;
        background-size: contain;
    }
}

@media(max-width: 767px) {
    .menuDivContainer {
        background: url("../assets/images/band.jpg");
        background-position: center;
        background-repeat: no-repeat;
        background-size: contain;
    }
}

